[package]
name = "stellarconduit-core"
version = "0.1.0"
edition = "2021"
description = "Core mesh networking and gossip protocol for StellarConduit"
license = "Apache-2.0"

[dependencies]
# Serialization and messaging
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1" # MessagePack for compact mesh payloads

# Cryptography and Identity
ed25519-dalek = "2.1.1"
rand = "0.8.5"
sha2 = "0.10.8"

# Stellar / Soroban
soroban-sdk = "22.0.0"

# Async and networking basics (for WiFi-Direct / Transport abstraction)
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Data structures and bloom filters for gossip deduplication
bloomfilter = "1.0.14"
lru = "0.12.3"

# Utilities
log = "0.4"
thiserror = "1.0"
chrono = "0.4"

[dev-dependencies]
env_logger = "0.11"
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5" # For benchmarking

[[bench]]
name = "gossip_bench"
harness = false

[[bench]]
name = "bloom_filter_bench"
harness = false
